<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:text="@string/name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="top"
                    android:padding="10dp"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:text="@string/number"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="top"
                    android:padding="10dp"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:padding="10dp"
                    android:text="@string/type"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phoneType"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:gravity="top"
                    android:padding="10dp"
                    android:textSize="15dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/callBtn"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/round_button_green"
                    android:src="@drawable/ic_call" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/contact_bottom_nav_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorGray"
        app:menu="@menu/contact_menu_add"
        app:itemTextColor="@drawable/color_selector"
        app:itemIconTint="@drawable/color_selector"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/contact_bottom_nav_rem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:itemBackground="@color/colorGray"
        app:menu="@menu/contact_menu_rem"
        app:itemTextColor="@drawable/color_selector"
        app:itemIconTint="@drawable/color_selector"/>

</RelativeLayout>
